# getty-jsonld-sparql-patterns

./: LICENSE  README.md  build.sh  build_requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
.circleci/: config.yaml  config.yml
src/gettysparqlpatterns/: VERSION.txt  __init__.py  exceptions.py  registry.py  utilities.py
src/gettysparqlpatterns/data/: archival_patterns.json  crmtodublincore.json  find_orphans.patternset.json  la_counts.json  linked_art_filters.json
src/gettysparqlpatterns/patterns/: __init__.py  archivalpatterns.py  la_counts.py
tests/: test_base_pattern.py  test_patternset.py  test_registry.py  test_str_subclasses.py
