[build-system]
requires = ["setuptools", "wheel", "requests"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gettysparqlpatterns = ["data/**/*"]


[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[project]
name = "gettysparqlpatterns"
dynamic = ["description", "dependencies", "readme", "keywords", "license", "classifiers", "version"]
requires-python = ">=3.12"

