[metadata]
name = gettysparqlpatterns
version = file: src/gettysparqlpatterns/VERSION.txt
description = A python library of SPARQL queries for use with the published data structures and ontologies in use at the Getty and held in public SPARQLable endpoints.
long_description = file: README.md
keywords = sparql, getty
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
zip_safe = True
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    requests

[options.packages.find]
where=src
